--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
                 <p>CONTACT US</p>
                 <h1>LET'S <strong>MAKE IT HAPPEN?</strong></h1>
             </div>
-            
+            <form action="https://api.web3forms.com/submit" method="POST">
+                 <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE">
             <div class="puts">
                 <p>Your Name*</p>
                 <input type="text">
@@ -173,6 +174,7 @@
 
                 <button>SEND MESSAGE</button>
             </div>
+            </form>
             <div class="image">
                 <img src="https://shrinkme.io/modern_theme/img/Connection-Image.png">
             </div>
